<resources>
    <string name="app_name">PalavaSmartCity</string>
    <string name="app_name_type">MOBILE</string>


    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>

    <string name="font_normal">fonts/Adamina-Regular.ttf</string>
    <string name="tap_to_edit">Tap to edit</string>
    <string name="hintWhenNoOptionsAvailabe"> </string>
    <string name="isLogeIn">isLogedIn</string>
    <string name="Welcome_Message">WelCome to Palava Smart Hub</string>
    <string name="home_Message_subtitle">I can help you with </string>
    <string name="startConversion">Start Conversion </string>
    <string name="otp">OTP</string>
    <string name="hintOtp">Enter Your OTP</string>
    <string name="registeredMobileNumber">Your Registered Mobile Number</string>
    <string name="mobile">Mobile</string>
    <string name="sendOTP">send OTP</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="emailId">Email Id</string>
    <string name="Update">Update</string>

    <string name="searchHint">Ex- no electricity / lift not working</string>
    <string name="enter_mobile_no">Enter Mobile No</string>


    <string name="sendTheComplaint">Send The Complaint</string>
    <string name="synonms">sysnonms</string>


</resources>
