<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/Welcome_Message"
        android:textSize="@dimen/dimen_30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_Message_subtitle"
        android:textSize="@dimen/dimen_14sp"
        android:visibility="gone" />

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/dimen_150"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_50"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/dimen_20"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/startConversionButton"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/margin_20"
            android:background="@color/white"
            android:textColor="@color/bg_gradient_start"
            android:layout_height="wrap_content"
            android:text="@string/startConversion" />

    </android.support.v7.widget.CardView>
</LinearLayout>