<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/bg_gradient_start">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welComeMessageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_20sp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_10"
            android:background="@color/white"
            android:elevation="@dimen/dimen_06"
            app:cardCornerRadius="@dimen/dimen_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.30"
                        android:text="@string/email"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/dimen_18sp" />


                    <EditText
                        android:id="@+id/mEmailEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.70"
                        android:background="@color/white"
                        android:hint="@string/emailId"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/bg_gradient_start"
                        android:textSize="@dimen/dimen_18sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.30"
                        android:text="@string/password"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/dimen_18sp" />


                    <EditText
                        android:id="@+id/mPasswordEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.70"
                        android:background="@color/white"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/bg_gradient_start"
                        android:textSize="@dimen/dimen_18sp" />
                </LinearLayout>


                <include
                    android:id="@+id/btnLoginUsingEmail"
                    layout="@layout/roundedbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_marginTop="@dimen/margin_10">

                </include>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loginProgressbarEmail"
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone">
    </ProgressBar>

</FrameLayout>